apps/productivity/dashy/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashy
  labels:
    name: dashy
    app.kubernetes.io/part-of: applications
    category: productivity
