apps/productivity/dashy/03-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: dashy
  labels:
    app: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
      - name: dashy
        image: lissy93/dashy:3.1.1
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config
          mountPath: /app/user-data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: dashy-pvc
