apps/productivity/dashy/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
  labels:
    app: dashy
spec:
  type: ClusterIP
  selector:
    app: dashy
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
